# lnd-grpc-tonic-client

./: Cargo.toml  README.md  build.rs
examples/: add_hold_invoice.rs  get_mission_control_config.rs
proto/lnrpc/: lightning.proto
proto/lnrpc/invoicesrpc/: invoices.proto
proto/lnrpc/routerrpc/: router.proto
src/: channel.rs  invoicesrpc.rs  lib.rs  lnrpc.rs  routerrpc.rs
