[package]
name = "lnd-grpc-tonic-client"
version = "0.3.0"
edition = "2021"
description = "Rust lnd client using tonic and tonic-openssl"
license-file = "LICENSE"
homepage = "https://github.com/doitian/lnd-grpc-tonic-client"
repository = "https://github.com/doitian/lnd-grpc-tonic-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hyper = "0.14"
hyper-openssl = "0.9"
openssl = "0.10.64"
prost = "0.12"
thiserror = "1.0.58"
tonic = "0.11"
tonic-openssl = "0.2.0"
tower-service = "0.3.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.11"
